Add upload operation to return local served file
